# guess-game

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
scripts/: update_version.sh
src/: cmd.rs  files.rs  game.rs  main.rs  test.rs
