[package]
name = "guess-game"
version = "0.1.8"
authors = ["Artem Kononov <artkonr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
whoami = "0.9.0"
strum = "0.18.0"
strum_macros = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
